# property-qr

./: .gitignore  README.md
property-qr/: Cargo.toml
property-qr/src/: main.rs
property-qr/src/config/: aws.rs  mod.rs  settings.rs
property-qr/src/errors/: app_error.rs  mod.rs
property-qr/src/handlers/: health.rs  mod.rs  qr_handler.rs  scan_handler.rs
property-qr/src/models/: mod.rs  property.rs  qr_code.rs  scan_analytics.rs
property-qr/src/routes/: api.rs  mod.rs
property-qr/src/services/: analytics_service.rs  mod.rs  property_service.rs  qr_generator.rs  s3_service.rs
property-qr/src/utils/: mod.rs  url_builder.rs  validation.rs
