[package]
name = "property-qr"
version = "0.1.0"
edition = "2021"  # Fixed: was "2024", should be "2021"

[dependencies]
# Web framework
axum = "0.8.4"
tokio = { version = "1.47.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"

# Database and time
mongodb = "3.0"
chrono = { version = "0.4", features = ["serde"] }

# Cryptography for hashing
sha2 = "0.10"

# Future dependencies (comment out if not needed yet)
# aws-sdk-s3 = "1.0"
# qrcode = "0.14"
# image = "0.25"
# uuid = { version = "1.0", features = ["v4"] }
# reqwest = { version = "0.12", features = ["json"] }